--- a/microservice/currency-exchange/deployment.yaml
+++ b/microservice/currency-exchange/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   name: currency-exchange
   namespace: currency-exchange-ns
 spec:
-  replicas: 1 #CHANGE
+  replicas: 1 
   minReadySeconds: 45
   selector:
     matchLabels:
@@ -28,13 +28,13 @@ spec:
         ports:
         - name: liveness-port
           containerPort: 8000
-        resources: #CHANGE
+        resources: 
           requests:
             cpu: 100m
             memory: 512Mi
           limits:
             cpu: 500m
-            memory: 1024Mi #256Mi 
+            memory: 1024Mi 
         readinessProbe:
           httpGet:
             path: /
@@ -55,16 +55,16 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  labels: #PODS
+  labels:
     app: currency-exchange
   name: currency-exchange
   namespace: currency-exchange-ns
 spec:
   ports:
-  - # nodePort: 30702 #CHANGE
-    port: 8000 #CHANGE
+  - # nodePort: 30702 
+    port: 8000 
     protocol: TCP
-    targetPort: 8000 #CHANGE
+    targetPort: 8000 
   selector:
     app: currency-exchange
-  sessionAffinity: None #CHANGE
+  sessionAffinity: None 
